# KWeX

./: .gitignore  AGENTS.md  ARCHITECTURE.md  KWeX_PRD.md  LEAN_EXPERT_REVIEW.md  PRODUCT_SPECIFICATION.md  README.md  faethm_jobs.csv  pearson.csv
.ralph/: .circuit_breaker_state  .ralph_session  .ralph_session_history  @AGENT.md  @fix_plan.md  PROMPT.md  progress.json  status.json
.ralph/specs/: requirements.md
docs/: API.md
docs/adr/: 001-data-curation-pattern.md
scripts/: dev.sh  prod.sh  setup.sh
src/backend/: .env.example  README.md  pyproject.toml
src/backend/app/: __init__.py  main.py  version.py
src/backend/app/api/v1/: router.py
src/backend/app/api/v1/endpoints/: chat_surveys.py  llm.py  metrics.py  occupations.py  opportunities.py  responses.py  status.py  surveys.py  tasks.py  teams.py  workflows.py
src/backend/app/core/: config.py
src/backend/app/db/: database.py
src/backend/app/models/: __init__.py  models.py
src/backend/app/schemas/: __init__.py  schemas.py
src/backend/app/services/: __init__.py  audit_logger.py  chat_prompts.py  chat_survey_service.py  faethm_client.py  metrics_calculator.py  opportunity_generator.py  prompt_templates.py  psych_safety_service.py  question_cache_service.py  question_generation_service.py  survey_generator.py  task_enrichment_service.py  workflow_visualizer.py
src/backend/app/services/llm/: __init__.py  azure_foundry_client.py  base_client.py  exceptions.py  mock_llm_client.py
src/backend/tests/: __init__.py  conftest.py  test_api_basic.py  test_opportunity_generator.py  test_survey_generator.py
(+39 files in other folders)
